# nvse-lsp

./: Cargo.toml  Makefile  README.md  nvim.sh  rustfmt.toml
.github/workflows/: release.yml
nvse-lsp.nvim/lua/: nvse-lsp.lua
resources/forms/: Anchorage.esm.json  BrokenSteel.esm.json  CaravanPack.esm.json  ClassicPack.esm.json  DeadMoney.esm.json  Fallout3.esm.json  GunRunnersArsenal.esm.json  HonestHearts.esm.json  LonesomeRoad.esm.json  MercenaryPack.esm.json  OldWorldBlues.esm.json  PointLookout.esm.json  TaleOfTwoWastelands.esm.json  ThePitt.esm.json  TribalPack.esm.json  YUPTTW.esm.json  Zeta.esm.json
resources/functions/: Base game.json  JIP LN NVSE.json  JohnnyGuitarNVSE.json  MCM Extensions.json  NVSE.json  ShowOffNVSE Plugin.json  kNVSE.json  lStewieAl's Tweaks.json  ttw_nvse.json
src/: ast.rs  db.rs  doc.rs  features.rs  game_data.rs  hir.rs  lexer.rs  main.rs  node.rs  parser.rs  syntax_node.rs  tree_builder.rs
src/ast/: nodes.rs
src/db/: script.rs
src/features/: completion.rs  format.rs  goto.rs  hover.rs  rename.rs  semantic_tokens.rs
src/hir/: infer.rs  infer_local.rs  lower.rs  printer.rs  propagate.rs  ty.rs
src/node/: api.rs
src/parser/: expression.rs  other.rs  statement.rs
src/syntax_node/: api.rs
test/: test.gek
test_data/ast/: nvse-binary-operations.ast  nvse-comments.ast  nvse-ternary-operations.ast  nvse-unary-operations.ast  test.ast  test2.ast
test_data/cases/: test.gek  test2.gek
vscode/: .vscodeignore  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode/src/: extension.ts
(+15 files in other folders)
