cargo-features = ["edition2024"]

[package]
name = "nvse-lsp"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "fat"
panic = "abort"
opt-level = 3

[dependencies]
anyhow = "1.0.86"
dashmap = "5.5"
futures = "0.3.30"
itertools = "0.13.0"
la-arena = "0.3.1"
lsp-types = "0.96"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37", features = ["full"] }
tower-lsp = "0.20"
walkdir = "2.5.0"

[dev-dependencies]
similar-asserts = "1.5"
